# githubactions-master

./: .gitignore  README.md  apuntes.md  comprobaciones.ipynb  db.sqlite  instrucciones github.md  instrucciones.md  pyproject.toml
.github/: menganito.yml
.github/workflows/: apuntes.md  build.yml
modeltools/: preprocessing.py
tests/: test_preprocessing.py
