[tool.poetry]
name = "modeltools"
version = "0.2.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
